src/test/deca/syntax/valid/testThis.deca
// test the use of this
// Result : OK
class A {
    int x;

    int getX(){
        return this.x;
    }
}
