src/test/deca/syntax/invalid/testAsm.deca
// Invalid use of the asm body method
// Result : Error
// expecting {'extends', '{'}

class Test{
    asm("Hello");
}
